--- a/RMSVST2/RMSMyVST2.dproj
+++ b/RMSVST2/RMSMyVST2.dproj
@@ -113,6 +113,7 @@
         <DCCReference Include="..\FrameworkCommon\UCDataLayer.pas"/>
         <DCCReference Include="..\SimpleSynthCommon\UMyVstDSP.pas"/>
         <DCCReference Include="..\SimpleSynthCommon\UPianoKeyboard.pas"/>
+        <DCCReference Include="DAVVstEffect.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
