--- a/RMSVST2/RMSMyVST2ForFP.dproj
+++ b/RMSVST2/RMSMyVST2ForFP.dproj
@@ -114,6 +114,7 @@
         <DCCReference Include="..\FrameworkCommon\UCDataLayer.pas"/>
         <DCCReference Include="..\SimpleSynthCommon\UMyVstDSP.pas"/>
         <DCCReference Include="..\SimpleSynthCommon\UPianoKeyboard.pas"/>
+        <DCCReference Include="DAVVstEffect.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -194,7 +195,7 @@
                 <Platform value="Win64">True</Platform>
             </Platforms>
             <Deployment Version="3">
-                <DeployFile LocalName="C:\MIDI\Vst\RMSMyVST2ForFP.dll" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="C:\Program Files\Common Files\VST2\RMSMyVST2ForFP.dll" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win64">
                         <RemoteName>RMSMyVST2ForFP.dll</RemoteName>
                         <Overwrite>true</Overwrite>
