renamed "presets" to programs. ProgramCount bugfix

--- a/RMSVST3/RMSMyVST3.dproj
+++ b/RMSVST3/RMSMyVST3.dproj
@@ -106,7 +106,7 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="UCPluginFactory.pas"/>
-        <DCCReference Include="UUIDHelper.pas"/>
+        <DCCReference Include="UVST3Utils.pas"/>
         <DCCReference Include="UCEditController.pas"/>
         <DCCReference Include="UCAudioProcessor.pas"/>
         <DCCReference Include="UCComponent.pas"/>
