--- a/RMSVST3/RMSMyVST3.dproj
+++ b/RMSVST3/RMSMyVST3.dproj
@@ -125,6 +125,7 @@
         <DCCReference Include="..\SimpleSynthCommon\UPianoKeyboard.pas"/>
         <DCCReference Include="..\SimpleSynthCommon\UMyVstDSP.pas"/>
         <DCCReference Include="Vst3Base.pas"/>
+        <DCCReference Include="..\FrameworkCommon\UCodeSiteLogger.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -205,7 +206,7 @@
                 <Platform value="Win64">True</Platform>
             </Platforms>
             <Deployment Version="3">
-                <DeployFile LocalName="C:\Program Files\Common Files\VST3\RMSMyVST3.dll" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="C:\Midi\Vst\RMSMyVST3.dll" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win64">
                         <RemoteName>RMSMyVST3.dll</RemoteName>
                         <Overwrite>true</Overwrite>
