--- a/FruityPlug/MyFruityPlug.dproj
+++ b/FruityPlug/MyFruityPlug.dproj
@@ -101,6 +101,7 @@
         </DCCReference>
         <DCCReference Include="..\SimpleSynthCommon\UPianoKeyboard.pas"/>
         <DCCReference Include="..\SimpleSynthCommon\UMyVstDSP.pas"/>
+        <DCCReference Include="..\FrameworkCommon\UCodeSiteLogger.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
